add a rating system that allows the user to rate certain property after he stay at it